[package]
name = "feature-probe"
version = "0.1.2-alpha.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Probe for Rust language features from build.rs"
repository = "https://github.com/tov/feature-probe-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["rustc", "features", "probe", "autoconf"]
categories = ["development-tools"]
